--- a/pushApp/backend/package.json
+++ b/pushApp/backend/package.json
@@ -18,6 +18,8 @@
         "mysql2": "latest"
     },
     "devDependencies": {
+        "sequelize": "latest",
+        "jest": "27.0.6",
         "bcrypt": "5.0.1",
         "express": "4.17.1"
     }
