--- a/pushApp/frontend/package.json
+++ b/pushApp/frontend/package.json
@@ -16,9 +16,9 @@
     },
     "devDependencies": {
         "eslint": "latest",
+        "axios": "0.21.1",
         "webpack": "latest",
-        "react": "latest",
-        "axios": "0.21.1"
+        "react": "latest"
     },
     "browserslist": {
         "production": [
